# clifspy

./: .gitignore  README.md  pyproject.toml
examples/: clifs_4.toml  weave_xsl.toml
src/clifspy/: clifspipe.py  cube.py  dap.py  derived_products.py  galaxy.py  multiwav.py  multiwav.py.save  plotting.py  utils.py
src/clifspy.egg-info/: PKG-INFO  requires.txt
src/clifspy/.ipynb_checkpoints/: astrometry-checkpoint.py  dap-checkpoint.py  multiwav-checkpoint.py  plotting-checkpoint.py  spectral_stacking-checkpoint.py
